--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
 	  <link rel="stylesheet" href="./css/fontawesome/web-fonts-with-css/css/fontawesome.min.css">
 	  <!-- Script customer chat à laisser en haut du fichier ! -->
 	  <script src="./javascript/customerChat.js"></script>
-	  <meta name="description" content="Marcel est un assistant personnel connecté qui facilite la vie des parents en répondant à leurs questions et tâches du quotidien, via Messenger" />
-	  <meta name="keywords" content="Hello, Marcel, hello marcel, hellomarcel, HM, chatbot, chat bot, enfants, aide, activités, parents, bot, assistant" />
-	  <title>Hello Marcel</title>
+	  <meta name="description" content="La Bulle, le nouveau programme audio d’Hello Marcel qui permet aux parents en quelques minutes par jour de se poser et réfléchir sur des questions de parentalité du quotidien." />
+	  <meta name="keywords" content="hello marcel, concentration, autonomie, la bulle, parentalité, audio, podcast, famille, enfant, conseil, programme, media, coach" />
+	  <title>La Bulle</title>
   </head>
 	<body>
 		<div hidden class="accroche"><img alt="hellomarcel" class="hellomarcel" src="./images/hm.png"/><span class="msgaccroche"><img alt="fb loading" style="height: 25px; margin: 0 20px 4px 20px;" src="./images/fbloading.gif"/></span></div>
@@ -29,12 +29,7 @@
 							<img alt="Title" class="title" src="./images/title.png"/>
 						</div>
 						<div style="margin-top: 3vw;" class="text-center col-xs-12 col-md-6">
-							<a style="padding-right: 30px;" class="navlink" href="#home">Home</a>
-							<a style="padding-right: 30px;" class="navlink" href="#whois" >Qui est Marcel ?</a>
-							<a style="padding-right: 30px;" class="navlink" href="#newsletter">Newsletter</a>
-							<a style="padding-right: 30px;" class="navlink" href="#temoignage">Témoignages</a>
-							<a style="padding-right: 30px;" target="_blank" class="navlink" href="https://medium.com/@Hello_Marcel">Blog</a>
-							<a data-toggle="modal" data-target="#modal" class="navlink" href="#">Contact</a>
+							<a data-toggle="modal" data-target="#modal" class="navlink" href="#">Login</a>
 						</div>
 					</div>
 				</div>
